fix: solved jump on conditional render of Spinner

--- a/packages/client/src/components/Layout/Layout.scss
+++ b/packages/client/src/components/Layout/Layout.scss
@@ -7,6 +7,7 @@
     flex-grow: 1;
     #totalTimeWrapper {
       margin-bottom: 34px;
+      height: 100px;
     }
     #timeButton {
       width: 200px;
